slider & accordion small devices fix updated

--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -720,7 +720,7 @@ padding-bottom: 20px;
         top: -130px ;
     }
     .slider-outer{
-        margin-top: 150px;
+        margin-top: 200px;
     }
     .next-arrow {
         position: relative;
@@ -1332,4 +1332,10 @@ padding: 3px 5px;
     font-size: 12px !important;
       }
 
+    }
+
+    @media screen and (max-width:350px){
+        .custome-accordion button.accordion-button {
+            font-size: 1.4rem !important;
+        }
     }
